# RefForge

./: .gitignore  README.md  RELEASE_FIX_SUMMARY.md  VERIFICATION_COMPLETE.md  jest.config.js  package-lock.json  package.json  playwright.config.ts  test-build.sh  tsconfig.json
.github/workflows/: node-tests.yml  release.yml  rust-tests.yml  tauri-smoke.yml  test-release.yml
RefForge/: settings.json
docs/: SETTINGS.md  before-after-comparison.md  blueprint.md  release-workflow-testing.md
jules-scratch/verification/: verify_notes_feature.py  verify_ui_improvements.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  settings.rs
src/__mocks__/: lucide-react.ts  tauri-api.ts
src/__mocks__/@tauri-apps/: api.ts  plugin-dialog.ts  plugin-fs.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/preferences/: page.test.tsx  page.tsx
src/components/: Preferences.tsx  add-reference-dialog.tsx  app-sidebar.tsx  icons.tsx  loading-skeleton.tsx  page-header.tsx  preferences-dialog.tsx  reference-card.tsx  reference-list.tsx  star-rating.tsx  theme-manager.tsx  theme-provider.tsx
src/components/__tests__/: Preferences.test.tsx
src/components/preferences/: appearance-tab.test.tsx  appearance-tab.tsx  database-tab.test.tsx  database-tab.tsx
src/data/: mock-data.ts
src/hooks/: use-filtered-references.ts  use-local-storage.ts  use-settings.ts  use-tauri-storage.ts
src/lib/: bibtex.ts  settings.ts
src/types/: index.ts  jest-dom.d.ts  tauri.d.ts
tests/: preferences.spec.ts
(+2 files in other folders)
